# gl_engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build.ps1
resources/: default.DDS  fragment_shader.glsl  standard_fs.glsl  standard_vs.glsl  vertex_shader.glsl
resources/assets/: shadow_test.fbx  teapot.fbx
resources/materials/: default.json
resources/scenes/: test_scene.json
resources/shaders/: depth_fs.glsl  depth_vs.glsl  standard_fs.glsl  standard_vs.glsl
resources/textures/: default.DDS  normal.DDS
scripts/: build.py
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/core/: application.cpp  application.h  assert.h  file_system.cpp  file_system.h  image_loader.cpp  image_loader.h  input.cpp  input.h  key_codes.h  model_loader.cpp  model_loader.h  mouse_codes.h  obj_loader.cpp  obj_loader.h  resource_manager.cpp  resource_manager.h  resources.h  sdk.h  transform.cpp  transform.h  utils.cpp  utils.h  uuid.cpp  uuid.h  window.cpp  window.h
src/editor/: editor_ui.cpp  editor_ui.h  fps_camera.cpp  fps_camera.h
src/file_manager/: file_manager.cpp  file_manager.h
src/mesh/: mesh.cpp  mesh.h
src/obj_loader/: obj_loader.cpp  obj_loader.h
src/renderer/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  material.h  mesh.cpp  mesh.h  opengl.cpp  opengl.h  opengl_debug.cpp  render_target.cpp  render_target.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/scene/: camera.cpp  camera.h  components.h  light.cpp  light.h  scene.cpp  scene.h  transform.h
src/shader/: shader.cpp  shader.h
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/texture/: texture.cpp  texture.h
src/transform/: transform.cpp  transform.h
src/ui/: uI_manager.h  ui_manager.cpp
